rpi/rules.iptables.v4.clr.txt
# Generated by iptables-save v1.8.7 on Mon Sep 25 18:46:48 2023
*raw
:PREROUTING ACCEPT [13028:3513779]
:OUTPUT ACCEPT [10760:11473257]
:DHCP_clients - [0:0]
COMMIT
# Completed on Mon Sep 25 18:46:48 2023
# Generated by iptables-save v1.8.7 on Mon Sep 25 18:46:48 2023
*filter
:INPUT ACCEPT [11404:2916487]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [10760:11473257]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Mon Sep 25 18:46:48 2023
# Generated by iptables-save v1.8.7 on Mon Sep 25 18:46:48 2023
*nat
:PREROUTING ACCEPT [1656:600378]
:INPUT ACCEPT [34:3166]
:OUTPUT ACCEPT [501:55673]
:POSTROUTING ACCEPT [501:55673]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Mon Sep 25 18:46:48 2023
